fix: overlay loading and headers z-index position

--- a/src/components/AdminHeader/AdminHeader.module.scss
+++ b/src/components/AdminHeader/AdminHeader.module.scss
@@ -2,6 +2,7 @@
   background-color: var(--background-opaque);
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 
 .contentWrapper {
