--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
   color: var(--font);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .contentWrapper {
