--- a/src/components/Loading/OverlayLoading.module.scss
+++ b/src/components/Loading/OverlayLoading.module.scss
@@ -3,6 +3,7 @@
   height: 100%;
   position: absolute;
   width: 100%;
+  z-index: 1;
 }
 
 .wrapperVisible {
